--- a/templates/usuarios/cambiarpassword.html
+++ b/templates/usuarios/cambiarpassword.html
@@ -1,4 +1,107 @@
 {% extends "base.html" %}
 {% block content %}
-	
+	<br>
+	{% if messages %}
+		{% for message in messages %}
+		{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+		<div class="alert alert-danger">	
+		{% endif %}
+		{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+		<div class="alert alert-success">	
+		{% endif %}
+		{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+		<div class="alert alert-warning">	
+		{% endif %}
+		{% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+		<div class="alert alert-info">	
+		{% endif %}
+		<button class="close" data-dismiss="alert"><span>&times;</span></button>
+			<strong>Alerta!</strong> {{message}}	
+		</div>
+		{% endfor %}
+	{% endif %}
+	<div class="row">
+		<div class="col-md-3 hidden-xs hidden-sm"></div>
+		<div class="col-xs-12 col-md-6">
+			<h3 class="text-center">
+			Actualización de Contraseña
+			<p class="small text-justify">
+				Se recomienda a los usuarios cambiar la contraseña en su primer inicio de sesión para así evitar el robo de información. Se sugiere escribir un password que tenga al menos un número, simbolos y letras mayusculas.
+			</p>
+			</h3>
+		</div>
+		<div class="col-md-3 hidden-xs hidden-sm"></div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3 hidden-xs hidden-sm"></div>
+		<div class="col-xs-12 col-md-6">
+			<div class="text-center"> 
+				Usuario: 
+				<strong>
+					{{funcionario.username}}
+				</strong>
+			</div>
+			<br>
+			<form id="form-pass" action="" method="post" role="form" class="form">
+				{% csrf_token %}
+				<div class="form-group">
+					<label for="id_newpassword">
+					Escriba un nuevo password:
+					</label>
+					<input type="hidden" id="id_idusuario" name="usuario" value="{{funcionario.id}}">
+					<input type="password" id="id_newpassword" class="form-control" name="newpassword">
+				</div>
+				<div class="form-group">
+					<label for="id_newpassrepeat">
+					Escriba de nuevo el nuevo password:
+					</label>
+					<input type="password" id="id_newpassrepeat" class="form-control" name="newpassrepeat">
+					<span class="hidden glyphicon glyphicon-ok" style="color:green; display: inline-block; float: right"></span>
+				</div>
+				<div class="form-group">
+					<a href="#modal-pass" class="btn btn-primary" data-toggle="modal">Cambiar Contraseña</a>
+				</div>
+			</form>
+		</div>
+		<div class="col-md-3 hidden-xs hidden-sm"></div>
+	</div>
+	<div class="modal fade" id="modal-pass">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4>Cambio de Contraseña</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Está seguro de hacer el cambio de contraseña?</p>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-default" data-dismiss="modal" value="cancelar">Cancelar</button>
+					<button id="aceptar" class="btn btn-info" type="submit">Aceptar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock content %}
+{% block javascript %}
+	{{block.super}}
+	<script>
+		$("button#aceptar").on("click",function(event){
+			$("form#form-pass").submit();
+		});
+		$("input#id_newpassrepeat").on("focusout",function(){
+			var pass1 = $("input#id_newpassword").val();
+			var pass2 = $("input#id_newpassrepeat").val();
+			if (pass1 != pass2){
+				alert("Las contraseñas no coinciden!");
+				$("input#id_newpassword").val("");
+				$("input#id_newpassrepeat").val("");
+				$("span.glyphicon-ok").addClass("hidden");
+				$("a[href=\"#modal-pass\"]").removeAttr("data-toggle");
+			}else{
+				$("a[href=\"#modal-pass\"]").attr("data-toggle","modal");
+				$("span.glyphicon-ok").removeClass("hidden");
+			}
+		});
+	</script>
+{% endblock javascript %}
