--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>SIMCOPV Login!</title>
+	<title>SIMCOPV Login</title>
 	<link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css"%}">
 	<link rel="stylesheet" href="{% static "bootstrap/css/bootstrap-theme.min.css" %}">
 </head>
@@ -25,7 +25,8 @@
 			<div class="col-xs-12 col-md-6">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h3 class="text-center">SIMCOPV Login</h3>
+						<h3 class="text-center">SIMCOPV </h3>
+						<h4 class="text-center">Login</h4>
 						{% if men %}
 						<div class="alert alert-warning">
 							<button class="close" data-dismiss="alert"><span>&times;</span></button>
