--- a/templates/usuarios/agregarperiodo.html
+++ b/templates/usuarios/agregarperiodo.html
@@ -19,14 +19,13 @@
 			</div>
 			{% endfor %}
 	{% endif %}
-	<br>
-	<h3 class="text-center">
+	<h4 class="text-center">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			Lista de Usuarios
+			Agregar Período Actual
 		</div>
 	</div>
-	</h3>
+	</h4>
 	<div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="row">
