--- a/templates/usuarios/verperiodos.html
+++ b/templates/usuarios/verperiodos.html
@@ -1,16 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-	<div class="row">
-		<div class="col-xs-12">
-			<h3 class="text-center">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						Ver Periodos	
-					</div>
-				</div>
-			</h3>
+	<h4 class="text-center">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				Ver Periodos por Usuario	
+			</div>
 		</div>
-	</div>
+	</h4>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="text-center">
