Remove skins for Admin LTE template

--- a/templates/usuarios/configuracion.html
+++ b/templates/usuarios/configuracion.html
@@ -7,7 +7,11 @@
 		<div class="col-xs-12 col-md-8">
       <div class="panel panel-default">
         <div class="panel-body">
-          <h3 class="text-center">Imagenes de la Página Principal</h3>
+          <h3 class="text-center">Imagenes de la Página Principal
+            <p class="small text-justify">
+              Se recomienda que las imagenes sean todas del mismo tamaño con un tamaño fijo de 1280x470
+            </p>
+          </h3>
     			<form action="" enctype="multipart/form-data" method="post" class="form" role="form">
     				{% csrf_token %}
     				{{form}}
