--- a/templates/base.html
+++ b/templates/base.html
@@ -219,14 +219,12 @@
           {% endblock %}
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
-
-     
       <!-- Control Sidebar -->      
       <aside class="control-sidebar control-sidebar-dark">                
         <!-- Create the tabs -->
         <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-          <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-          <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
+          <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="glyphicon glyphicon-star"></i></a></li>
+          <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="glyphicon glyphicon-cog"></i></a></li>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content">
@@ -283,6 +281,7 @@
       <!-- Add the sidebar's background. This div must be placed
            immediately after the control sidebar -->
       <div class='control-sidebar-bg'></div>
+
     </div><!-- ./wrapper -->
     <div class="modal fade" id="usuario-pass">
       <div class="modal-dialog">
