--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@
 								<label for="id_{{form.password.name}}">Password:</label>
 								{{form.password}}
 							</div>
-							<div class="form-group">
+							<div class="form-group pull-right">
 								<button class="btn btn-primary" type="submit">Iniciar Sesión</button>
 							</div>
 						</form>
