--- a/templates/permisos/permiso.html
+++ b/templates/permisos/permiso.html
@@ -7,13 +7,31 @@
     <div class="col-xs-12 col-md-6">
     <div class="panel panel-default">
       <div class="panel-body">
-    			<form action="" method="post" class="form" role="form">
+    			<form action="" method="post" class="form" role="form" id="permiso">
     				{% csrf_token %}
-    				{{form}}
+    				<div class="form-group">
+              <label for="id_fecha_inicio">Fecha Inicio:</label>
+              <input type="date" id="id_fecha_inicio" name="fecha_inicio" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="id_hora_inicio">Hora Inicio:</label>
+              <input type="time" id="id_hora_inicio" name="hora_inicio" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="id_fecha_fin">Fecha Fin:</label>
+              <input type="date" id="id_fecha_fin" name="fecha_fin" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="id_hora_fin">Hora Fin:</label>
+              <input type="time" id="id_hora_fin" name="hora_fin" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="id_descripcion">Descripción</label>
+              <textarea name="descripcion" id="id_descripcion" cols="30" rows="10" placeholder="Escriba el motivo por el que pide el permiso" class="form-control"></textarea>
+            </div>
     				<br>
     				<button class="btn btn-success" type="input">Solicitar Permiso</button>
     			</form>
-    			{{form.errors}}
     		</div> 
       </div>
     </div>
@@ -21,3 +39,14 @@
   <div class="col-sm-3 hidden-xs hidden-sm">
   </div>
 {% endblock %}
+{% block javascript %}
+  {{block.super}}
+  <script>
+    $(document).ready(function(){
+      $("form#permiso").on("submit",function(event){
+        event.preventDefault();
+        
+      });
+    });
+  </script>
+{% endblock javascript %}
