Creating validar permisos option

--- a/templates/permisos/validarpermisos.html
+++ b/templates/permisos/validarpermisos.html
@@ -17,66 +17,52 @@
   </div>
   {% endfor %}
 	{% endif %}
-	<div class="row">
-		<div class="col-sm-1 hidden-xs hidden-sm">
-		</div>
-		<div class="col-xs-12 col-md-10">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="text-center">Solicitud de Permiso</h4>
-				</div>
-				<div class="panel-body">
-					<div class="row text-center">
-						<div class="col-xs-4">
-							<strong>Nombre</strong>
-						</div>
-						<div class="col-xs-4">
-							<strong>Puesto</strong>							
-						</div>
-						<div class="col-xs-4">
-							<strong>Tipo de Usuario</strong>
-						</div>
+	{% for permiso in permisos %}
+		<div class="row">
+			<div class="col-sm-1 hidden-xs hidden-sm">
+			</div>
+			<div class="col-xs-12 col-md-10">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h5 class="text-center"><strong>Solicitud de Permiso</strong></h5>
 					</div>
-					<div class="row text-center">
-						<div class="col-xs-4">
-							{LOL}
-						</div>
-						<div class="col-xs-4">
-							{LOL}
-						</div>
-						<div class="col-xs-4">
-							{LOL}
-						</div>
-					</div>
-					<br>
-					<div class="row text-center">
-						<div class="col-xs-5">
-							<strong>Fecha Inicio</strong>
-						</div>
-						<div class="col-xs-7">
-							{DATE_1}
-						</div>
-					</div>
-					<div class="row text-center">
-						<div class="col-xs-5">
-							<strong>Fecha Fin</strong>
-						</div>
-						<div class="col-xs-7">
-							{DATE_2}
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-2 col-xs-offset-9">
-							<div class="pull-right">
-								<button class="btn btn-primary">Validar</button>
-							</div>
+					<div class="panel-body">
+						<table class="table table-bordered text-center">
+							<thead>
+								<tr>
+									<th>Nombre</th>
+									<th>Puesto</th>
+									<th>Tipo de Usuario</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>{{permiso.usuario.first_name}} {{permiso.usuario.last_name}}</td>
+									<td>{{permiso.usuario.persona.puesto}}</td>
+									<td>{{permiso.usuario.persona.tipo}}</td>
+								</tr>
+								<tr>
+									<td><strong>Fecha Inicio:</strong></td>
+									<td colspan="2">{{permiso.fecha_inicio}}</td>
+								</tr>
+								<tr>
+									<td><strong>Fecha Fin:</strong></td>
+									<td colspan="2">{{permiso.fecha_fin}}</td>
+								</tr>
+								<tr>
+									<td><strong>Descripción:</strong></td>
+									<td colspan="2">{{permiso.descripcion}}</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="pull-right">
+							<button class="btn btn-primary" type="submit">Validar</button>
 						</div>
 					</div>
 				</div>
 			</div>
+			<div class="col-sm-1 hidden-xs hidden-sm">
+			</div>
 		</div>
-		<div class="col-sm-1 hidden-xs hidden-sm">
-		</div>
-	</div>
-	
+	{% endfor %}
 {% endblock content %}
