--- a/templates/base.html
+++ b/templates/base.html
@@ -175,6 +175,7 @@
                 {% if perms.usuarios.validar_permiso %}
                   <li><a href="{% url "validar" %}"><span class="glyphicon glyphicon-record"></span> Validar Permisos</a></li>
                 {% endif %}
+                <li><a href="{% url "validarRRHH" %}"><span class="glyphicon glyphicon-record"></span> Validar Permisos (RRHH)</a></li>
               </ul>
             </li>
             <li>
