--- a/templates/permisos/validarpermisoRRHH.html
+++ b/templates/permisos/validarpermisoRRHH.html
@@ -35,56 +35,66 @@
 					<form action="" role="form" class="form" method="post" id="validarform"> 
 						{% csrf_token %}
 						<div class="form-group">
-							<label for="id_periodo">Periodo</label>
-							<input type="text" name="periodo" id="id_periodo" class="form-control">
+							<label for="id_usuario">Usuario</label>
+							<input type="text" readonly="readonly" value="{{permiso.usuario.first_name}}  {{permiso.usuario.last_name}}" id="id_usuario" class="form-control">
 						</div>
 						<div class="form-group">
-							<label for="id_usuario">Usuario</label>
-							<input type="text" name="usuario" id="id_usuario" class="form-control">
+							<label for="id_periodo">Periodo</label>
+							<input type="text" readonly="readonly" value="{{permiso.periodo.anio_periodo}}" id="id_periodo" class="form-control">
 						</div>
 						<div class="form-group">
 			              <label for="id_fecha_inicio">Fecha Inicio:</label>
-			              <input type="date" id="id_fecha_inicio" name="fecha_inicio" class="form-control">
+			              <input type="date" readonly="readonly" id="id_fecha_inicio" value="{{permiso.fecha_inicio|date:'Y-m-d'}}" class="form-control">
 			            </div>
 			            <div class="form-group">
 			              <label for="id_hora_inicio">Hora Inicio:</label>
-			              <input type="time" id="id_hora_inicio" name="hora_inicio" class="form-control">
+			              <input type="time" readonly="readonly" id="id_hora_inicio" value="{{permiso.fecha_inicio|time:'H:i'}}" class="form-control">
 			            </div>
 			            <div class="form-group">
 			              <label for="id_fecha_fin">Fecha Fin:</label>
-			              <input type="date" id="id_fecha_fin" name="fecha_fin" class="form-control">
+			              <input type="date" readonly="readonly" id="id_fecha_fin" value="{{permiso.fecha_fin|date:'Y-m-d'}}" class="form-control">
 			            </div>
 			            <div class="form-group">
 			              <label for="id_hora_fin">Hora Fin:</label>
-			              <input type="time" id="id_hora_fin" name="hora_fin" class="form-control">
+			              <input type="time" readonly="readonly" id="id_hora_fin" value="{{permiso.fecha_inicio|time:'H:i'}}" class="form-control">
 			            </div>
 			            <div class="form-group">
 			              <label for="id_descripcion">Descripción</label>
-			              <textarea name="descripcion" id="id_descripcion" cols="30" rows="10" placeholder="Escriba el motivo por el que pide el permiso" class="form-control"></textarea>
+			              <textarea name="descripcion" readonly="readonly" id="id_descripcion" cols="30" rows="10" placeholder="Escriba el motivo por el que pide el permiso" class="form-control">{{permiso.descripcion}}</textarea>
 			            </div>
 			            <div class="form-group">
 			            	<label for="id_tipopermiso">Tipo de Permiso</label>
-			            	<div class="row">
-			            		<div class="col-xs-9">
-					            	<select name="tipopermiso" id="id_tipopermiso" class="form-control">
-					            		<option value=""></option>
-					            		<option value="Imputable">Imputable</option>
-					            		<option value="No Imputable">No Imputable</option>
-					            	</select>
-			            		</div>
-			            		<div class="col-xs-3">
-			            			<div class="pull-left">
-			            				<a href="#change" style="text-decoration: underline">Cambiar</a>
-			            			</div>
-			            		</div>
-			            	</div>
+			            	<select name="tipopermiso" id="id_tipopermiso" class="form-control">
+			            		<option value="">------------</option>
+			            		<option value="Imputable">Imputable</option>
+			            		<option value="No Imputable">No Imputable</option>
+			            	</select>
 			            </div>			           
-			            <button class="btn btn-success pull-right">Validar</button>
+			            <a href="#modal-accept" id="avalidar" data-toggle="modal" class="btn btn-primary pull-right">Validar</a>
+			             <input type="hidden" id="inputmode" name="mode"> <!-- Input
+			            que contiene el modo (validar o rechazar) y se lo envía en el POST -->
+						<a href="#modal-accept" id="arechazar" data-toggle="modal" class="btn btn-default pull-left">Rechazar</a>
 					</form>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-3 hidden-xs hidden-sm">
+		</div>
+	</div>
+	<div class="modal fade" id="modal-accept">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4>Validación de Permiso de Usuario</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Está seguro de que desea <strong></strong> el permiso?</p>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-default" data-dismiss="modal" value="cancelar">Cancelar</button>
+					<button id="aceptar" class="btn btn-info" type="submit">Aceptar</button>
+				</div>
+			</div>
 		</div>
 	</div>
 {% endif %}
@@ -93,9 +103,23 @@
 	{{block.super}}
 	<script>
 		$(document).ready(function(){
-			// At the beginning of the load of the page
-			$("#change").on("click",function(){
-				$("#id_tipopermiso").prop("readonly",true);
+			var mode = null;
+			$("#avalidar").on("click",function(){
+				$("div#modal-accept").find("strong").text("validar");
+				mode = "validar";
+			});
+			$("#arechazar").on("click",function(){
+				$("div#modal-accept").find("strong").text("rechazar");
+				mode = "rechazar";
+			});
+			$("button#aceptar").on("click",function(){
+				$("input#inputmode").val(mode);
+				if($("#id_tipopermiso").val() != ""){
+					$("form.form").submit();
+				}else{
+					$("div#modal-accept").modal("hide");
+					alert("Por favor seleccione un tipo de Permiso");
+				}
 			});
 		});
 	</script>
